testing lambda functionality